connect out app to postgresql

--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "nodejs",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "nodejs started",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ankitg1602/nodejs.git"
-  },
-  "author": "ankit kumar gupta",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ankitg1602/nodejs/issues"
-  },
-  "homepage": "https://github.com/ankitg1602/nodejs#readme",
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mysql2": "^1.6.4",
+    "pg": "^7.8.0",
+    "pug": "^2.0.3"
   }
 }
