--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.3"
+    "pg": "^7.8.0",
+    "pug": "^2.0.3",
+    "sequelize": "^4.42.0"
   }
 }
